--- a/frontend/src/app/components/dashboard-component/dashboard-component.html
+++ b/frontend/src/app/components/dashboard-component/dashboard-component.html
@@ -66,43 +66,60 @@
 
     <h2 class="text-lg font-bold mb-4">Add New Transaction</h2>
 
-    <!-- Formulaire -->
-    <form (ngSubmit)="submitForm()">
-      <div class="mb-3">
-        <label class="block text-sm mb-1 font-medium">Amount</label>
-        <input 
-          type="number" 
-          name="amount"
-          required
-          class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
-        />
-      </div>
+    <form [formGroup]="transactionForm" (ngSubmit)="submitForm()">
+        <div class="mb-3">
+          <label class="block text-sm mb-1 font-medium">Status</label>
+            <div class="flex gap-3">
+                <label class="flex items-center gap-2">
+                    <input 
+                      type="radio" 
+                      formControlName="is_in" 
+                      [value]="true" 
+                      class="accent-green-500"
+                    />
+                    Earn
+                </label>
+    
+                <label class="flex items-center gap-2">
+                    <input 
+                      type="radio" 
+                      formControlName="is_in" 
+                      [value]="false" 
+                      class="accent-red-500"
+                    />
+                    Spend
+                </label>
+            </div>
 
-      <div class="mb-3">
-        <label class="block text-sm mb-1 font-medium">Reason</label>
-        <input 
-          type="text" 
-          name="reason"
-          required
-          class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
-        />
-      </div>
+        </div>
 
-      <div class="flex justify-end gap-2 mt-4">
-        <button 
-          type="button"
-          class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition"
-          (click)="closeModal()"
-        >
-          Cancel
-        </button>
-        <button 
-          type="submit"
-          class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition"
-        >
-          Save
-        </button>
-      </div>
-    </form>
+        <div class="mb-3">
+          <label class="block text-sm mb-1 font-medium">Amount</label>
+          <input 
+            type="number" 
+            formControlName="amount"
+            class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
+          />
+        </div>
+      
+        <div class="mb-3">
+          <label class="block text-sm mb-1 font-medium">Reason</label>
+          <input 
+            type="text" 
+            formControlName="reason"
+            class="w-full border rounded-lg px-3 py-2 outline-none focus:ring-2 focus:ring-blue-400"
+          />
+        </div>
+      
+        <div class="flex justify-end gap-2 mt-4">
+          <button type="button" class="px-4 py-2 rounded-lg bg-gray-300 hover:bg-gray-400 transition" (click)="closeModal()">
+            Cancel
+          </button>
+          <button type="submit" class="px-4 py-2 rounded-lg bg-blue-500 text-white hover:bg-blue-700 transition">
+            Save
+          </button>
+        </div>
+      </form>
+      
   </div>
 </div>
