--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,44 +1,54 @@
-
-<div class="search h-[3rem] mx-8 flex justify-end items-center my-5 rounded-xl">
-    <div class="me-5 bg-white px-3 rounded-3xl shadow-md">
+<div *ngIf="connected; else loginTemplate">
+    <div class="search h-[3rem] mx-8 flex justify-end items-center my-5 rounded-xl">
+      <div class="me-5 bg-white px-3 rounded-3xl shadow-md">
         <input type="text" class="me-3 py-2 rounded-3xl" placeholder="Search...">
         <i class="fa-solid fa-magnifying-glass"></i>
+      </div>
     </div>
-</div>
-
-<div class="flex flex-row h-[32rem]">
-    <div class="p-0 flex flex-col justify-between aside basis-1/7 ms-8 rounded-xl bg-white shadow-md">
+  
+    <div class="flex flex-row h-[32rem]">
+      <div class="p-0 flex flex-col justify-between aside basis-1/7 ms-8 rounded-xl bg-white shadow-md">
         <ul class="mt-5 flex flex-col">
-            <a [routerLink]="['/dashboard']" routerLinkActive="bg-zinc-100"  class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
-                <li class="flex items-center">
-                    <i class="fa-regular fa-house me-3"></i>
-                    <span>Dashboard</span>
-                </li>
-            </a>
-
-            <a [routerLink]="['/stats']" routerLinkActive="bg-zinc-100"  class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
-                <li class="flex items-center">
-                    <i class="fa-solid fa-chart-line me-3"></i>
-                    <span>Statistics</span>
-                </li>
-            </a>
-            <a [routerLink]="['/transactions']" routerLinkActive="bg-zinc-100"  class=" px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
-                <li class="flex items-center">
-                    <i class="fa-regular fa-chart-bar me-3"></i>
-                    <span>Transaction</span>
-                </li>
-            </a>
-            
+          <a [routerLink]="['/dashboard']" routerLinkActive="bg-zinc-100" class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <li class="flex items-center">
+              <i class="fa-regular fa-house me-3"></i>
+              <span>Dashboard</span>
+            </li>
+          </a>
+  
+          <a [routerLink]="['/stats']" routerLinkActive="bg-zinc-100" class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <li class="flex items-center">
+              <i class="fa-solid fa-chart-line me-3"></i>
+              <span>Statistics</span>
+            </li>
+          </a>
+  
+          <a [routerLink]="['/transactions']" routerLinkActive="bg-zinc-100" class="px-3 py-2 hover:bg-zinc-50 w-[100%] inline-block">
+            <li class="flex items-center">
+              <i class="fa-regular fa-chart-bar me-3"></i>
+              <span>Transaction</span>
+            </li>
+          </a>
         </ul>
-
-        <div class="px-3 py-2 items-center flex flex-row">
+  
+        <div class="px-3 py-2 items-center flex flex-row justify-between">
+          <div class="flex items-center">
             <div style="width: 30px; height: 30px; border-radius: 50%;" class="profile bg-blue-500 me-3"></div>
-            <a class="hover:bg-zinc-50" href="#">
-                <span class="block">{{ user.username | titlecase }}</span>
-            </a>
+            <span class="block">{{ user?.username | titlecase }}</span>
+          </div>
+          <button (click)="logout()" class="text-red-500 hover:text-red-700 text-sm">
+            <i class="fa-solid fa-right-from-bracket"></i>
+          </button>
         </div>
-    </div>
-    <div class="main basis-6/7 mx-8 rounded-xl">
+      </div>
+  
+      <div class="main basis-6/7 mx-8 rounded-xl">
         <router-outlet></router-outlet>
+      </div>
     </div>
-</div>
+  </div>
+  
+  <ng-template #loginTemplate>
+    <app-login (isConnected)="onConnected($event)"></app-login>
+  </ng-template>
+  
