--- a/frontend/src/app/components/login/login.scss
+++ b/frontend/src/app/components/login/login.scss
@@ -1,14 +1,4 @@
 .login-form {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    i {
-        top: 50%;
-        transform: translateY(-50%);
-        right: 10px;
-    }
 
     button:hover {
         cursor: pointer;
@@ -17,4 +7,8 @@
     i:hover {
         cursor: pointer;
     }
+}
+
+svg {
+    width: 80%;
 }
